--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -1421,7 +1421,7 @@
     "# Stop if there has been no improvement for 100 epochs\n",
     "es = keras.callbacks.EarlyStopping(verbose=1, patience=100)\n",
     "# Save best model while training\n",
-    "mc = keras.callbacks.ModelCheckpoint('best_model.h5')\n",
+    "mc = keras.callbacks.ModelCheckpoint('model/encoder.h5')\n",
     "\n",
     "callbacks_list = [es, mc]\n",
     "\n",
@@ -1445,7 +1445,7 @@
    "outputs": [],
    "source": [
     "from keras.models import load_model\n",
-    "best_model = load_model('best_model.h5', custom_objects={'euclidean_distance_loss': euclidean_distance_loss})\n",
+    "best_model = load_model('model/encoder.h5', custom_objects={'euclidean_distance_loss': euclidean_distance_loss})\n",
     "encoder = Model(best_model.input, best_model.get_layer('bottleneck').output)\n",
     "\n",
     "enc = encoder.predict(features_train_scaled) # returns the encoded values (32 floats instead of 2048)\n"
@@ -1745,7 +1745,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder.save('encoder.h5')"
+    ""
    ]
   },
   {
@@ -1811,6 +1811,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
