--- a/feature_creation.ipynb
+++ b/feature_creation.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "res_net = keras.applications.resnet50.ResNet50(include_top=False, pooling='avg')\n",
     "\n",
-    "encoder = load_model('encoder.h5')\n",
+    "encoder = load_model('model/encoder.h5')\n",
     "\n",
     "print(\"Combining models...\")\n",
     "combined = Model(inputs=res_net.input, outputs=encoder(res_net.output))\n"
@@ -389,6 +389,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
