--- a/image_scan.ipynb
+++ b/image_scan.ipynb
@@ -103,7 +103,7 @@
     "while batch_counter < len(data_filtered):\n",
     "\n",
     "    print(f\"  Processing batch {batch_counter} to {batch_counter+batch_size} of {len(data_filtered)}.\")\n",
-    "    current_batch = data[batch_counter:batch_counter+batch_size]\n",
+    "    current_batch = data_filtered[batch_counter:batch_counter+batch_size]\n",
     "\n",
     "    session = FuturesSession(max_workers=10)\n",
     "\n",
@@ -164,6 +164,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
